# glaze-chem

./: .gitignore  README.md  blend.py  cli.py  cte.py  ingredient_substitution.ipynb  main.py  pyproject.toml  recipe_to_umf.ipynb  solver.py  solver_examples.ipynb  umf_calculations.ipynb  utils.py
cli-example/: constraints.yaml  example.sh  materials.yaml  recipes.yaml  target.yaml
