[project]
name = "glaze-chem"
version = "0.1.0"
description = "Educational notebooks for ceramic glaze UMF calculations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "typer>=0.21.1",
]

[project.scripts]
gchem = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
